Fixed a z-index issue on mobile

--- a/wcfsetup/install/files/style/imageViewer.less
+++ b/wcfsetup/install/files/style/imageViewer.less
@@ -191,6 +191,7 @@
 					opacity: 0;
 					position: absolute;
 					top: 50%;
+					z-index: 30;
 					
 					.transition(opacity, .3s);
 					
